# TileDB-CSharp

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Default.Build.props  Directory.Build.props  Directory.Packages.props  README  README.md  TileDB-CSharp.sln  azure-pipelines.yml  nuget.config
.config/: dotnet-tools.json
.github/: dependabot.yml
.github/scripts/: build_cpp_wrapper_linux_mac.sh  build_example.sh  dotnet_build_all.sh  dotnet_test_all.sh  download_tiledb.sh  download_tiledb_linux.sh  download_tiledb_macos.sh  download_tiledb_windows.sh  install_tiledb.sh  install_tiledb_linux.sh  install_tiledb_macos.sh  run_example.sh  run_example_linux.sh  run_example_mac.sh
.github/workflows/: docs.yml  generate-bindings.yml  nightly-issue-template.md  nightly.yml  release.yml  tiledb-csharp.yml
TileDB-CSharp-Examples/: TileDB-CSharp-Examples.csproj
TileDB-CSharp-Test/: TileDB-CSharp-Test.csproj
TileDB.CSharp/: TileDB.CSharp.csproj  TileDB.CSharp.nuspec  TileDB.CSharp.targets
TileDB.CSharp/benchmark/: Dense2DArrayWithVariousTileSizes.cs  Sparse2DArrayWithVariousCapacities.cs  Sparse2DArrayWithVariousMaxSizes.cs  TileDB.CSharp.Benchmark.csproj
TileDB.CSharp/src/: Array.cs  ArrayExtension.cs  ArrayUtil.cs  Attribute.cs  AttributeError.cs  Context.cs  CoreUtil.cs  DataType.cs  Dimension.cs  Domain.cs  EncryptionType.cs  EnumUtil.cs  FilesystemType.cs  Filter.cs  FilterOption.cs  MapInt32Float32.cs  MapInt32UInt64.cs  MapInt64Double.cs  MapInt64Float32.cs  MapInt64Int32.cs  MapStringFloat32.cs  MapStringPairInt64Int64.cs  MapStringVectorChar.cs  MapStringVectorDouble.cs  MapStringVectorFloat32.cs  MapStringVectorInt32.cs  MapStringVectorInt64.cs  MapStringVectorString.cs  MapStringVectorUInt32.cs  MapStringVectorUInt64.cs  MapStringVectorUInt8.cs  ObjectType.cs  PairDoubleDouble.cs  PairFloat32Float32.cs  PairInt64Int64.cs  PairUInt64UInt64.cs  Query.cs  QueryCondition.cs  QueryExtension.cs  QueryStatus.cs  (+19 more)
ci/: azure-macos.yml  azure-windows.yml
cpp/: CMakeLists.txt
cpp/cmake/: TileDB.cmake
cpp/src/: CMakeLists.txt  tiledb_csharp_cpp_wrapper.cxx  tiledb_csharp_cpp_wrapper_linux64.cxx  tiledb_wrapper_win64.cxx
cpp/src/tiledb/cxx_api/: json.h  tiledb.cc  tiledb.h  tiledb_cxx.h  tiledb_cxx_array.h  tiledb_cxx_array_schema.h  tiledb_cxx_array_util.cc  tiledb_cxx_array_util.h  tiledb_cxx_attribute.h  tiledb_cxx_config.h  tiledb_cxx_context.h  tiledb_cxx_core_interface.h  tiledb_cxx_deleter.h  tiledb_cxx_dimension.h  tiledb_cxx_domain.h  tiledb_cxx_enum.h  tiledb_cxx_exception.h  tiledb_cxx_filter.h  tiledb_cxx_filter_list.h  tiledb_cxx_group.h  tiledb_cxx_object.h  tiledb_cxx_object_iter.h  tiledb_cxx_query.h  tiledb_cxx_query_condition.h  tiledb_cxx_schema_base.h  tiledb_cxx_stats.h  tiledb_cxx_string_util.cc  tiledb_cxx_string_util.h  tiledb_cxx_type.h  tiledb_cxx_utils.h  tiledb_cxx_version.h  tiledb_cxx_vfs.h  tiledb_enum.h  tiledb_export.h  tiledb_serialization.h
cpp/swig/: get_csharp_wrapper.sh  get_csharp_wrapper_linux64.sh  get_csharp_wrapper_win64.sh  swig_common.i  swig_tiledb.i  swig_tiledb_exception.i
cpp/tool/: cpp_header_parser.py  tiledb_code_util.py
csharp/TileDB.CSharp/: TileDB.CSharp.sln
csharp/TileDB.CSharp.Benchmark/: TileDB.CSharp.Benchmark.sln
csharp/TileDB_CSharp/: TileDB_CSharp.sln
csharp/csharp_wrapper/: Array.cs  ArraySchema.cs  ArrayType.cs  ArrayUtil.cs  Attribute.cs  AttributeError.cs  Config.cs  Context.cs  Dimension.cs  Domain.cs  Filter.cs  FilterList.cs  FilterType.cs  LayoutType.cs  MapInt32Char.cs  MapInt32Double.cs  MapInt32Int32.cs  MapInt32Int64.cs  MapInt32String.cs  MapInt32UChar.cs  MapInt32UInt32.cs  MapInt32UInt64.cs  MapInt64Char.cs  MapInt64Double.cs  MapInt64Int32.cs  MapInt64Int64.cs  MapInt64String.cs  MapInt64UChar.cs  MapInt64UInt32.cs  MapInt64UInt64.cs  MapStringChar.cs  MapStringDouble.cs  MapStringInt32.cs  MapStringInt64.cs  MapStringPairInt64Int64.cs  MapStringPairUInt64UInt64.cs  MapStringString.cs  MapStringUChar.cs  MapStringUInt32.cs  MapStringUInt64.cs  (+83 more)
csharp/tiledbcs.CSharp/: tiledbcs.CSharp.sln
csharp/win64/: Array.cs  ArraySchema.cs  Attribute.cs  AttributeError.cs  Config.cs  Context.cs  Dimension.cs  Domain.cs  Filter.cs  FilterList.cs  MapInt32Char.cs  MapInt32Double.cs  MapInt32Int32.cs  MapInt32Int64.cs  MapInt32String.cs  MapInt32UChar.cs  MapInt32UInt32.cs  MapInt32UInt64.cs  MapInt64Char.cs  MapInt64Double.cs  MapInt64Int32.cs  MapInt64Int64.cs  MapInt64String.cs  MapInt64UChar.cs  MapInt64UInt32.cs  MapInt64UInt64.cs  MapStringChar.cs  MapStringDouble.cs  MapStringInt32.cs  MapStringInt64.cs  MapStringString.cs  MapStringUChar.cs  MapStringUInt32.cs  MapStringUInt64.cs  Object.cs  ObjectIter.cs  Query.cs  SWIGTYPE_p_FILE.cs  SWIGTYPE_p_std__arrayT_std__string_2_t.cs  SWIGTYPE_p_std__arrayT_tiledb_layout_t_2_t.cs  (+63 more)
doc/: README.md  build_doc.sh
doc/docfx_project/: docfx.json  index.md
docs/: docfx.json  filterConfig.yml  index.html  index.md  manifest.json  obsoletions.md  toc.html  toc.yml  xrefmap.yml
docs/api/: TileDB.Array.html  TileDB.ArraySchema.html  TileDB.ArrayType.html  TileDB.ArrayUtil.html  TileDB.Attribute.html  TileDB.AttributeError.html  (+156 more)
examples/: ExampleArray.cs  ExampleArrayConsolidate.cs  ExampleArraySchema.cs  ExampleConfig.cs  ExampleDenseArray.cs  ExampleExceptions.cs  ExampleFileApi.cs  ExampleNullableAttribute.cs  ExampleQueryCondition.cs  ExampleQueryCondition2.cs  ExampleReadDenseLayouts.cs  ExampleSpanOfT.cs  ExampleSparseArray.cs  ExampleStringDimension.cs  ExampleStringMultiRangeQuery.cs  ExampleSystemArray.cs  ExampleTileDBBuffer.cs  ExampleTileDBBufferString.cs  ExampleVarLengthAttribute.cs  ExampleVersion.cs  Examples.cs  README.md
notebooks/: README.md  array_metadata.ipynb  group.ipynb  metadata.ipynb  metadata_0.ipynb  quickstart_dense.ipynb
sources/: NuGet.props
swig/: get_csharp_wrapper_linux64.sh  get_csharp_wrapper_win64.sh  swig_common.i  swig_tiledb.i  swig_tiledb_exception.i
test/: TestExamples.cs  TestExamples.csproj  TileDBTests.cs  TileDBTests.csproj
tool/: tiledb_code_util.py
(+387 files in other folders)
